# ticketland-pass-bot

./: Cargo.toml  LICENSE
operations/: Dockerfile
src/: api.rs  handler.rs  lib.rs  main.rs  role_manager.rs
src/cmd/: mod.rs  register.rs  register_server.rs  verify_ticket.rs
src/models/: mod.rs  role_assignment.rs  user_verification.rs
src/queue_consumer/: mod.rs  role_handler.rs  user_verification.rs
src/utils/: config.rs  store.rs
