[package]
name = "ticketland-pass-bot"
version = "0.2.2"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
borsh = "0.9.3"
dotenv = "0.15"
eyre = "0.6.8"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.1.9" }
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.15"  }
ticketland-pass-common-data = { git = "https://github.com/ticketland-io/ticketland-pass-common", version = "0.2.9"  }
ticketland-crypto = { git = "https://github.com/ticketland-io/common-rust", version = "0.1.15" }
lapin = "2.1.1"
tokio = { version = "1.14.1", features = ["rt-multi-thread"]}
tracing = "0.1.19"
tracing-subscriber = "0.3.16"
